# calcular-digitos-verificar-cpf

./: .gitignore  README.md
ada/: README.md  alire.toml  cpf.adb  cpf.gpr
ada/src/: cpf.adb
c/: README.md  calcularCpf.c  cpf.c
c#/: Cpf.cs  README.md
c++/: README.md  compile.sh  cpf.cpp  cpf.h  main.cpp  recompile.sh
cobol/: README.md  cpf.cbl
d/: .gitignore  README.md  dub.json
elixir/: README.md  cpf.ex
fortran/: README.md  cpf.f90  main.f90
go/: README.md  go.mod
haskell/: README.md  cpf.hs
java/: CalcularCpf.java  Cpf.java  README.md
julia/: README.md  cpf.jl
lisp/: README.md  cpf.lisp
lua/: .calcularDigitosVerificarCpf.lua.swp  README.md  calcularDigitosVerificarCpf.lua  cpf.lua
mojo/: README.md  cpf.🔥
odin/: CalcularDigitosVerificarCpf.odin  Cpf.odin  README.md
pascal/: README.md  cpf.pas
perl/: README.md  cpf.pl
php/: README.md  calcularDigitosVerificarCpf.php
python/: README.md  calcular_digitos_cpf-test.py  calcular_digitos_cpf.py  calcular_digitos_cpf.sh  cpf-test.py  cpf.py  verificar_comprimento_cpf-test.py  verificar_comprimento_cpf.py  verificar_cpf-test.py  verificar_cpf.py  verificar_cpf.sh
r/: README.md  cpf.R
ring/: README.md  cpf.ring
ruby/: README.md  calcular_digitos_verificar_cpf.rb  cpf.rb
rust/: Cargo.toml  README.md
rust/src/: cpf.rs  main.rs
smalltalk/: README.md  cpf.st
typescript/: CLI_calcular_digitos_cpf.ts  CLI_verificar_digitos_cpf.ts  calcular_digitos_cpf.ts  limpar_numero.ts  package.json  tsconfig.json  verificar_digitos_cpf.ts
zig/: README.md  calcular_cpf.zig  cpf.zig
(+16 files in other folders)
